crates/ox_content_renderer/src/frameworks/snapshots/ox_content_renderer__frameworks__tests__escapes_raw_html_literals_without_changing_runtime_html.snap
---
source: crates/ox_content_renderer/src/frameworks/tests.rs
expression: "format!(\"react:\\n{react}\\n\\nvue:\\n{vue}\\n\\nsvelte:\\n{svelte}\")"
---
react:
import { createElement } from 'react';

const rawHtml = "\x3C/script>\x3Cp title=\"line\nnext\">{ ok }\x3C/p>";

export default function MarkdownContent() {
  return createElement('div', {
    className: 'ox-content',
    dangerouslySetInnerHTML: { __html: rawHtml },
  });
}


vue:
import { defineComponent, h } from 'vue';

const rawHtml = "\x3C/script>\x3Cp title=\"line\nnext\">{ ok }\x3C/p>";

export default defineComponent({
  name: 'MarkdownContent',
  setup() {
    return () => h('div', { class: 'ox-content', innerHTML: rawHtml });
  },
});


svelte:
<script>
  const rawHtml = "\x3C/script>\x3Cp title=\"line\nnext\">{ ok }\x3C/p>";
</script>

<div class="ox-content">
  {@html rawHtml}
</div>
