crates/ox_content_renderer/src/frameworks/snapshots/ox_content_renderer__frameworks__tests__renders_escaped_js_string_literals_for_text_and_attributes.snap
---
source: crates/ox_content_renderer/src/frameworks/tests.rs
expression: code
---
createElement('div', { className: 'ox-content' }, createElement("p", { "title": "quote \" slash \\" }, "line\nnext"))
