crates/ox_content_renderer/src/frameworks/snapshots/ox_content_renderer__frameworks__tests__renders_framework_islands_with_deterministic_props.snap
---
source: crates/ox_content_renderer/src/frameworks/tests.rs
expression: code
---
createElement('div', { className: 'ox-content' }, createElement("p", null, "Before"), createElement(Alert, { "active": true, "tone": "info" }, "Read docs"))
