crates/ox_content_renderer/src/frameworks/snapshots/ox_content_renderer__frameworks__tests__renders_nested_json_props_in_stable_top_level_order.snap
---
source: crates/ox_content_renderer/src/frameworks/tests.rs
expression: code
---
createElement('div', { className: 'ox-content' }, createElement(Widget, { "a": {"nested":true}, "z": [3,2,1] }, "child"))
