crates/ox_content_renderer/src/frameworks/snapshots/ox_content_renderer__frameworks__tests__renders_react_create_element_code.snap
---
source: crates/ox_content_renderer/src/frameworks/tests.rs
expression: code
---
createElement('div', { className: 'ox-content' }, createElement("section", { "className": "lead", "htmlFor": "name", "data-id": "42", "aria-label": "Intro" }, createElement("p", { "style": { "fontWeight": "bold", "--brand": "red" } }, "Hello ", createElement("strong", null, "world"))))
