crates/ox_content_renderer/src/frameworks/snapshots/ox_content_renderer__frameworks__tests__renders_react_data_and_aria_camel_case_as_attributes.snap
---
source: crates/ox_content_renderer/src/frameworks/tests.rs
expression: code
---
createElement('div', { className: 'ox-content' }, createElement("button", { "data-test-id": "save", "aria-label": "Save" }, "Save"))
