crates/ox_content_renderer/src/frameworks/snapshots/ox_content_renderer__frameworks__tests__renders_solid_children_variadically.snap
---
source: crates/ox_content_renderer/src/frameworks/tests.rs
expression: "format!(\"single:\\n{single}\\n\\nmany:\\n{many}\")"
---
single:
h('div', { class: 'ox-content' }, h("p", null, h("span", null, "one")))

many:
h('div', { class: 'ox-content' }, h("p", null, h("span", null, "one"), h("span", null, "two")))
