crates/ox_content_renderer/src/frameworks/snapshots/ox_content_renderer__frameworks__tests__renders_solid_hyperscript_code.snap
---
source: crates/ox_content_renderer/src/frameworks/tests.rs
expression: code
---
h('div', { class: 'ox-content' }, h("label", { "class": "field", "for": "name" }, h("span", null, "Name"), h("input", { "disabled": true, "type": "text" })))
